@@ -22,18 +22,16 @@
  */
 package org.opengrok.web;
 
-import org.junit.Test;
+import jakarta.ws.rs.container.ContainerRequestContext;
+import jakarta.ws.rs.container.ContainerResponseContext;
+import jakarta.ws.rs.core.MultivaluedHashMap;
+import jakarta.ws.rs.core.MultivaluedMap;
+import org.junit.jupiter.api.Test;
 import org.opengrok.web.api.v1.filter.CorsFilter;
 
-import javax.ws.rs.container.ContainerRequestContext;
-import javax.ws.rs.container.ContainerResponseContext;
-import javax.ws.rs.core.MultivaluedHashMap;
-import javax.ws.rs.core.MultivaluedMap;
-
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import static org.opengrok.web.api.v1.filter.CorsFilter.ALLOW_CORS_HEADER;
@@ -47,7 +45,7 @@ public class CorsFilterTest {
 
     @Test
     public void CorsTest() {
-        testBoth("https://example.org", Arrays.asList("*"));
+        testBoth("https://example.org", List.of("*"));
     }
 
     private void testBoth(String origin, List<Object> headerValue) {
