@@ -18,7 +18,7 @@
  */
 
 /*
- * Copyright (c) 2016, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2021, Oracle and/or its affiliates. All rights reserved.
  */
 package opengrok.auth.plugin.configuration;
 
@@ -27,35 +27,35 @@ import java.beans.XMLDecoder;
 import java.beans.XMLEncoder;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.LinkedList;
-import junit.framework.AssertionFailedError;
+import java.util.List;
+
 import opengrok.auth.plugin.ldap.LdapServer;
 import opengrok.auth.plugin.util.WebHook;
 import opengrok.auth.plugin.util.WebHooks;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 /**
  *
  * @author Krystof Tulinger
  */
-public class ConfigurationTest {
+class ConfigurationTest {
 
     @Test
-    public void testEncodeDecode() {
+    void testEncodeDecode() {
         // Create an exception listener to detect errors while encoding and
         // decoding
         final LinkedList<Exception> exceptions = new LinkedList<>();
-        ExceptionListener listener = new ExceptionListener() {
-            @Override
-            public void exceptionThrown(Exception e) {
-                exceptions.addLast(e);
-            }
-        };
+        ExceptionListener listener = exceptions::addLast;
 
         ByteArrayOutputStream out = new ByteArrayOutputStream();
         XMLEncoder enc = new XMLEncoder(out);
@@ -66,7 +66,7 @@ public class ConfigurationTest {
         configuration1.setSearchTimeout(1000);
         configuration1.setConnectTimeout(42);
         configuration1.setCountLimit(10);
-        configuration1.setServers(new ArrayList<>(Arrays.asList(new LdapServer("http://server.com"))));
+        configuration1.setServers(new ArrayList<>(List.of(new LdapServer("http://server.com"))));
         WebHooks webHooks = new WebHooks();
         WebHook hook = new WebHook();
         hook.setContent("foo");
@@ -79,11 +79,7 @@ public class ConfigurationTest {
 
         // verify that the write didn't fail
         if (!exceptions.isEmpty()) {
-            AssertionFailedError afe = new AssertionFailedError(
-                    "Got " + exceptions.size() + " exception(s)");
-            // Can only chain one of the exceptions. Take the first one.
-            afe.initCause(exceptions.getFirst());
-            throw afe;
+            throw new AssertionError( "Got " + exceptions.size() + " exception(s)", exceptions.getFirst());
         }
 
         ByteArrayInputStream in = new ByteArrayInputStream(out.toByteArray());
@@ -96,11 +92,63 @@ public class ConfigurationTest {
         dec.close();
         // verify that the read didn't fail
         if (!exceptions.isEmpty()) {
-            AssertionFailedError afe = new AssertionFailedError(
-                    "Got " + exceptions.size() + " exception(s)");
-            // Can only chain one of the exceptions. Take the first one.
-            afe.initCause(exceptions.getFirst());
-            throw afe;
+            throw new AssertionError( "Got " + exceptions.size() + " exception(s)", exceptions.getFirst());
         }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {
+            "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+                    "<java version=\"11.0.8\" class=\"java.beans.XMLDecoder\">\n" +
+                    "  <object class=\"java.lang.Runtime\" method=\"getRuntime\">\n" +
+                    "    <void method=\"exec\">\n" +
+                    "      <array class=\"java.lang.String\" length=\"2\">\n" +
+                    "        <void index=\"0\">\n" +
+                    "          <string>/usr/bin/nc</string>\n" +
+                    "        </void>\n" +
+                    "        <void index=\"1\">\n" +
+                    "          <string>-l</string>\n" +
+                    "        </void>\n" +
+                    "      </array>\n" +
+                    "    </void>\n" +
+                    "  </object>\n" +
+                    "</java>",
+            "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+                    "<java version=\"11.0.8\" class=\"java.beans.XMLDecoder\">\n" +
+                    "  <object class=\"java.lang.ProcessBuilder\">\n" +
+                    "    <array class=\"java.lang.String\" length=\"1\" >\n" +
+                    "      <void index=\"0\"> \n" +
+                    "        <string>/usr/bin/curl https://oracle.com</string>\n" +
+                    "      </void>\n" +
+                    "    </array>\n" +
+                    "    <void method=\"start\"/>\n" +
+                    "  </object>\n" +
+                    "</java>",
+            "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n" +
+                    "<java version=\"11.0.8\" class=\"java.beans.XMLDecoder\">\n" +
+                    "  <object class = \"java.io.FileOutputStream\"> \n" +
+                    "    <string>opengrok_test.txt</string>\n" +
+                    "    <method name = \"write\">\n" +
+                    "      <array class=\"byte\" length=\"3\">\n" +
+                    "        <void index=\"0\"><byte>96</byte></void>\n" +
+                    "        <void index=\"1\"><byte>96</byte></void>\n" +
+                    "        <void index=\"2\"><byte>96</byte></void>\n" +
+                    "      </array>\n" +
+                    "    </method>\n" +
+                    "    <method name=\"close\"/>\n" +
+                    "  </object>\n" +
+                    "</java>"
+    })
+    void testDeserializationOfNotWhiteListedClassThrowsError(final String exploit) {
+        assertThrows(IllegalAccessError.class, () -> Configuration.makeXMLStringAsConfiguration(exploit));
+    }
+
+    @Test
+    void testReadCacheValid() throws IOException {
+        File testFile = new File(ConfigurationTest.class.getClassLoader().
+                getResource("opengrok/auth/plugin/configuration/plugin-config.xml").getFile());
+        Configuration config = Configuration.read(testFile);
+        assertNotNull(config);
+        assertEquals(2, config.getServers().size());
     }
 }
